# Makefile.am file for knocker
# Edited by Gabriele Giorgetti <g.gabriele@europe.com>

# This file is processed by automake


## Any directories that are built and installed should go here.
SUBDIRS = src docs

## Any directories to be a part of the distribution should be listed
## here, as well as have a Makefile generated at the end of configure.in
DIST_SUBDIRS = $(SUBDIRS) docs


# All the rest of the distributed files
EXTRA_DIST = \
	AUTHORS 	\
	BUGS            \
	COPYING         \
        INSTALL         \
        README		\
	TO-DO    	\
	autogen.sh	\
	ChangeLog

		
     