dnl configure.in file for knocker
dnl Edit by Gabriele Giorgetti <g.gabriele@europe.com>

dnl to be processed with autoconf 

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(knocker, 0.1.0)
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX

AC_PROG_CC
AM_PROG_CC_STDC

dnl Check for standard C headers
AC_HEADER_STDC

dnl Check for extra required headers
AC_CHECK_HEADERS(       \
	string.h	\
        errno.h         \
	signal.h	\
        netdb.h         \
        netinet/in.h    \
	arpa/inet.h	\
        sys/socket.h    \
	sys/types.h	\
	sys/wait.h	\
        unistd.h        \
)



dnl Check for library functions
AC_CHECK_FUNCS(strcat strcmp strcpy)


dnl Use -Wall if we have gcc.
if test "x$GCC" = "xyes" ; then
  CFLAGS="$CFLAGS -Wall"
fi


AC_OUTPUT([
Makefile 
docs/Makefile
src/Makefile
])
